test(der): move the real-SecurityManager gate test out of the unit suite
DeSerializationPermissionGateTest.endToEnd_realManagerDeniesDecode installed a
process-wide SecurityManager and tried to restore the previous (null) one in its
finally. On DirtyChai a SecurityManager cannot be uninstalled once set
(setSecurityManager(null) is refused), so the denying manager leaked into the
shared der test JVM and every subsequent decode tripped the
DeSerializationPermission("ATOMIC") gate ("ATOMIC de-serialization denied") --
6 failures + 53 errors in the qa/DirtyChai run. (Masked on stock JDK 21, where
the default -Djava.security.manager=disallow made the test self-skip.)

Remove the process-wide-install test; real-installed-SecurityManager coverage
belongs in the qa / jtreg integration suites (isolated, policy-configured JVMs).
The seam tests that pass a manager directly to
ObjectCodec.checkAtomicDeSerializationPermitted (no install) are retained.

der 388 green (Zulu 21).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>